index.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);

/*
TODO:
For the header, text on top of an image is what the big website guys are doing. 
*/

.flexBox {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

body{
    background: black;
    /*When there's padding on the left and right sides,
    when the browser is closed as much as it can go, the Amp
    logo gets cut off on the right side and not the left side
    so only pad on the top and bottom. A maybe-permanent shim*/
    margin-top: 20px;
    margin-bottom: 15px;
    margin-left: 0px;
    margin-right: 0px;
}

div.feature {
    float: left;
    width: 100%;
    text-align: left;
}

div.spinner {
    position:absolute;
    float: left;
    width: 100%;
    text-align: center;
}

.cboxElement:hover,
.cboxElement:active,
.cboxElement:focus {
    outline:0;
}


div.insertion-point {
    display: none;
}

div.feature {
    background-repeat: no-repeat;
    background-position: center;
}

div.feature-information {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
div.feature-text {
    max-width: 50%;
    font-family:sans-serif;
    line-height: 34px;
    color: #999999;
}
img.feature-logo {
    width: 150px;
    height: auto;
    margin-right: 30px;
}

.feature-images {
    text-align: center;
}
.feature-images img {
    width: 250px;
    height: 250px;
    margin: 16px;
    border-radius: 16px
}
.disney {
    background-image: url(../img/disney/disney_bg.png);
}
.microsoft {
    background-image: url(../img/microsoft/microsoft_bg.png);
}
.eddiebauer {
    background-image: url(../img/disney/disney_bg.png);
}
.atomic {
    background-image: url(../img/atomic/atomic_bg.png);
    padding-bottom: 400px;
}

.pg {
    background-image: url(../img/pg/pg_bg.png);
}
.pi {
    background-image: url(../img/pi/pi_bg.png);
    padding-bottom: 200px;
}
.usgov {
    background-image: url(../img/disney/disney_bg.png);
}
.kmd {
    background-image: url(../img/disney/disney_bg.png);
}

.cocacola {
    background-image: url(../img/cocacola/cocacola_bg.png);
    padding-bottom: 200px;
}


/* Half my kingdom for some SCSS. (I don't have a kingdom, so I'm safe.) --SK */

.color-cyan header, .color-cyan nav a, .color-cyan nav a:hover, color-cyan nav a:visited,
.color-cyan footer, .color-cyan footer a, .color-cyan footer a:hover, color-cyan footer a:visited {
    color: #00ffff;
}
.color-cyan nav a {
    border-color: #00ffff;
}
.color-cyan #logoImgContainer path, .color-cyan #backToTopBtnContainer path  {
    fill: #00ffff;
}

.color-green header, .color-green nav a, .color-green nav a:hover, color-green nav a:visited,
.color-green footer, .color-green footer a, .color-green footer a:hover, color-green footer a:visited {
    color: #33ff00;
}
.color-green nav a {
    border-color: #33ff00;
}
.color-green #logoImgContainer path, .color-green #backToTopBtnContainer path {
    fill: #33ff00;
}

.color-magenta header, .color-magenta nav a, .color-magenta nav a:hover, color-magenta nav a:visited,
.color-magenta footer, .color-magenta footer a, .color-magenta footer a:hover, color-magenta footer a:visited {
    color: #ff33cc;
}
.color-magenta nav a {
    border-color: #ff33cc;
}
.color-magenta #logoImgContainer path, .color-magenta #backToTopBtnContainer path {
    fill: #ff33cc;
}

.color-pink header, .color-pink nav a, .color-pink nav a:hover, color-pink nav a:visited,
.color-pink footer, .color-pink footer a, .color-pink footer a:hover, color-pink footer a:visited {
    color: #ff0066;
}
.color-pink nav a {
    border-color: #ff0066;
}
.color-pink #logoImgContainer path, .color-pink #backToTopBtnContainer path {
    fill: #ff0066;
}

.color-orange header, .color-orange nav a, .color-orange nav a:hover, color-orange nav a:visited,
.color-orange footer, .color-orange footer a, .color-orange footer a:hover, color-orange footer a:visited {
    color: #ff9900;
}
.color-orange nav a {
    border-color: #ff9900;
}
.color-orange #logoImgContainer path, .color-orange #backToTopBtnContainer path {
    fill: #ff9900;
}

.color-yellow header, .color-yellow nav a, .color-yellow nav a:hover, color-yellow nav a:visited,
.color-yellow footer, .color-yellow footer a, .color-yellow footer a:hover, color-yellow footer a:visited {
    color: #ffcc00;
}
.color-yellow nav a {
    border-color: #ffcc00;
}
.color-yellow #logoImgContainer path, .color-yellow #backToTopBtnContainer path {
    fill: #ffcc00;
}

nav > a.current,
nav > a.current:hover {
    border-color: white;
    color: white;
}


#logoImgContainer{
    display:inline-block;
}

.myLogo{
    fill: #ffffff;
}

@media all and (max-width: 548px) {
  #logoImgContainer img{
      height: auto;
  }
}

@media all and (max-width: 400px) {
    div.feature-information{
    flex-direction: column;
    }
}

#logoText{
    font-size: 10pt;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    
    text-align: left;
    margin-left:20px;
    width:300px;
    display:inline-block;
}

header {
    text-align: center;
    background: black;
}

.featureBorder {
    margin-bottom: 0px;
    background: black;
    padding-top: 0px;
    /*padding-bottom: 20px;*/
    padding-left: 16px;
    padding-right: 16px;
    border: none;
    border-top: 1px solid #2e2e2e;
    height: 1px;
}

#feature {
    color:white;
    padding-left: 32px;
    padding-right: 32px;
    padding-bottom: 16px;
}

.featureRightColumn{
    display:flex-inline;
    flex-flow: column;
    flex-wrap: no-wrap;
    max-width: 300px;
}

.featureImageGroup{
    display:flex;
    flex-flow: column;
    flex-wrap: wrap;
}

.featureImageGroup > *{
    padding-bottom: 16px;
    padding-top: 16px;
    min-width:100%;
    max-width:100%;
    width: 100%;
    height: auto;
}

.featureText{
    font-size: 10pt;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-color: #ff0000;
    
    white-space: normal;
    padding-right: 16px;
    padding-left: 8px;
    padding-top: 8px;
    width: 250px;
}

.featureLogo{
    margin-top: 100px;
    margin-right: 30px;
    width: 163px;
}

/*This is needed to remove the margin for when the logo
goes on top of the feature text!!!!*/
@media all and (max-width: 548px) {
    .featureLogo{
        margin-top: 0px;
    }
}

#featureSectionBottomBorderContainer {
    margin:0px;
    padding:0px;
    width: 100%;
    height: auto;
}

nav > a {
    font-size: 10pt;
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    color: #ffffff;
    display: inline-block;
    width: 70px;
    margin: 0 10px;
    padding: 12px;
    text-decoration: none;
    border: 2px solid;
    border-radius: 12px;
}
nav > div {
    color: white;
}

nav a:hover, nav a:focus {
    color: #fff;
}

#everythingBelowFeatureSection{
    position: absolute;
    z-index: 2;
}

#tiles {
    text-align: center;
}
#tiles > .size {
    display: inline-block;
    vertical-align: bottom;
    width: 50%;
    max-width: 282px; /* 250 + 16 * 2 */
}
#tiles > .size > .aspect {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 100%; /* percent of parent width */
}
#tiles > .size > .aspect > a {
    position: absolute;
    top: 0;
    left: 0;
    /* These percents are derived from:
     * margin: 16px
     * padding: 16px // to keep image away from edge of tile
     * width, height: 250px
     * I'm too distracted right now to reproduce the math. --SK
     */
    width: 88.652482%;
    height: 88.652482%;
    box-sizing: border-box; /* padding subtracts from content area */
    padding: 5.673759%;
    margin: 5.673759%;
    border-radius: 5.673759%;

    cursor: pointer;

    /* give up and use flexbox for vertically centering the image */
    display: flex;
}
#tiles > .size > .aspect > a > img {
    margin: auto;
}

#atomic {
    background: #ff33cc;
}

#pi {
    background: #00ccff;
}

#coca-cola {
    background: #ff9900;
}

#disney {
    background: #33cc00;
}

#eb {
    background: #ffcc00;
}

#kmd{
    background: #cc00ff;
}

#microsoft {
    background: #0099cc;
}

#pg {
    background: #ff0066;
}

#branding{
    background: #fff;
}

footer{
    font-family: 'Roboto', sans-serif;
    font-size: 9pt;
    font-weight: 400;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
    width:100%;
    color: #fff;
    text-align:center;
    margin-bottom: 60px;
}

#copyright{
    padding-left: 10px;
    padding-right: 10px;
}

#contact{
    padding-left: 10px;
    padding-right: 10px;
    text-decoration: none;
}

#backToTopText{
    padding-right: 10px;
}

#backToTopBtnContainer{
    padding-left: 10px;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
    cursor:pointer;
}

